staging-gtw/staging-vote-preview-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vote-preview-http-https
  namespace: staging
spec:
  parentRefs:
    # - name: staging-gtw
    #   sectionName: http
    #   kind: Gateway
    - name: staging-gtw
      sectionName: https
      kind: Gateway
  hostnames:
    - vote-preview.ashwingowda.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vote-preview
          namespace: staging
          port: 80
